# cross-correlate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml
app/: Cargo.toml
app/src/: main.rs
fuzz/: Cargo.toml
fuzz/complex_double/: complex_double.rs
fuzz/double/: double.rs
fuzz/single/: single.rs
fuzz/single_complex/: single_complex.rs
src/: correlate_complex.rs  cross_correlate.rs  double.rs  double_complex.rs  error.rs  fast_divider.rs  fft.rs  lib.rs  mode.rs  pad.rs  real.rs  single.rs  single_complex.rs  spectrum.rs
src/avx/: mod.rs  mul_spectrum_f32.rs  mul_spectrum_f64.rs
src/neon/: complex.rs  mod.rs  mul_spectrum_f32.rs  mul_spectrum_f32_fcm.rs  mul_spectrum_f64.rs  mul_spectrum_f64_fcm.rs
src/sse/: mod.rs  mul_spectrum_f32.rs  mul_spectrum_f64.rs
